--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: nightly
+        target: thumbv7em-none-eabihf
+        components: rust-src, rustfmt
+        override: true
     - name: Build
-      run: cargo build --verbose
+      run: cargo build --verbose --target=thumbv7em-none-eabi
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test --verbose --target=thumbv7em-none-eabi
