--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,6 +23,6 @@ jobs:
         components: rust-src, rustfmt
         override: true
     - name: Build
-      run: cargo build --verbose --target=thumbv7em-none-eabihf
+      run: cargo build --target=thumbv7em-none-eabihf
     - name: Run tests
-      run: cargo test --verbose --target=thumbv7em-none-eabihf
+      run: cargo test --target=thumbv7em-none-eabihf
