--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,6 +22,8 @@ jobs:
         target: thumbv7em-none-eabihf
         components: rust-src, rustfmt
         override: true
+    - name: Update
+      run: cargo update
     - name: Build
       run: cargo build --target=thumbv7em-none-eabihf
     - name: Run tests
